--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "pixrem": "^5.0.0",
     "qunit": "^2.11.2",
     "typescript": "^4.0.2",
-    "webpack-stream": "^5.2.1"
+    "webpack-stream": "^5.2.1",
+    "node-sass-json-importer": "^4.3.0"
   },
   "dependencies": {
     "bootstrap": "^5.0.0-alpha1",
