--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "url": "https://github.com/ItalyStrap/italystrap.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@types/jquery": "^3.5.1",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@types/jquery": "^3.5.6",
     "autoprefixer": "^9.8.6",
-    "cssnano": "^4.1.10",
-    "grunt": "^1.3.0",
+    "cssnano": "^4.1.11",
+    "grunt": "^1.4.1",
     "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
     "grunt-composer": "^0.4.5",
@@ -33,11 +33,12 @@
     "grunt-exec": "^3.0.0",
     "grunt-file-creator": "^0.1.3",
     "grunt-fontello": "^0.3.7",
-    "grunt-git": "^1.0.14",
+    "grunt-git": "^1.1.1",
     "grunt-github-releaser": "^0.1.18",
     "grunt-perfbudget": "^0.2.0",
     "grunt-postcss": "^0.9.0",
     "grunt-prompt": "^1.3.3",
+    "grunt-sass": "^3.1.0",
     "grunt-sync": "^0.8.2",
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-version": "^1.3.2",
@@ -50,20 +51,20 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
-    "gulp-zip": "^5.0.2",
-    "jasmine": "^3.6.1",
+    "gulp-zip": "^5.1.0",
+    "jasmine": "^3.9.0",
     "load-grunt-tasks": "^3.5.2",
     "pixrem": "^5.0.0",
-    "qunit": "^2.11.2",
-    "typescript": "^4.0.2",
-    "webpack-stream": "^5.2.1",
-    "node-sass-json-importer": "^4.3.0"
+    "qunit": "^2.17.2",
+    "typescript": "^4.4.3",
+    "webpack-stream": "^5.2.1"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-alpha1",
+    "bootstrap": "^5.1.1",
     "popper.js": "^1.16.1"
   }
 }
