Fix GA MySQL password

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ TEST_SITE_TABLE_PREFIX="wp_"
 TEST_DB_NAME="wploader"
 TEST_DB_HOST="localhost"
 TEST_DB_USER="root"
-TEST_DB_PASSWORD=""
+TEST_DB_PASSWORD="root"
 TEST_TABLE_PREFIX="wp_"
 TEST_SITE_WP_URL="http://wp.localhost"
 TEST_SITE_WP_DOMAIN="wp.localhost"
