--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
 		}
 	],
 	"minimum-stability": "stable",
+	"repositories": [
+    	{
+			"type": "vcs",
+			"url": "https://github.com/bordoni/phpass"
+		}
+	],
 	"require": {
 		"php" : ">=7.2",
 		"italystrap/empress": "^1.1",
