Little refactoring for the License

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ TEST_SITE_DB_HOST="localhost"
 TEST_SITE_DB_USER="root"
 TEST_SITE_DB_PASSWORD=""
 TEST_SITE_TABLE_PREFIX="wp_"
-TEST_DB_NAME="wploader"
+TEST_DB_NAME="test"
 TEST_DB_HOST="localhost"
 TEST_DB_USER="root"
 TEST_DB_PASSWORD=""
