--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
 
     strategy:
       matrix:
-        php_versions: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        php_versions: [ '7.4', '8.0', '8.1' ]
 
     steps:
       - name: Checkout
