--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,12 +23,12 @@ jobs:
   tests:
     name: Test on PHP ${{ matrix.php_versions }}
 
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.php_versions == '8.1' }}
 
     strategy:
       matrix:
-        php_versions: [ '7.4', '8.0', '8.1' ]
+        php_versions: [ '7.4' ]
 
     steps:
       - name: Checkout
