--- a/.github/workflows/integration-e2e.yml
+++ b/.github/workflows/integration-e2e.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Start database server
         run: |
           sudo /etc/init.d/mysql start
+          mysql -u root root
           mysql -e "create database IF NOT EXISTS ${{env.DB_NAME}};" -uroot -proot
           mysql -e "create database IF NOT EXISTS ${{env.TEST_DB_NAME}};" -uroot -proot
 
