--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
 		}
 	],
 	"minimum-stability": "stable",
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/overclokk/color"
+		}
+	],
 	"require": {
 		"php" : ">=7.4",
 		"italystrap/empress": "~2.0.0",
@@ -59,7 +65,8 @@
 		"brianium/paratest": "^6.0.0",
 		"symfony/asset": "^5.0",
 		"inpsyde/assets": "^2.1",
-		"downshiftorg/wp-http": "^2.0"
+		"downshiftorg/wp-http": "^2.0",
+		"spatie/color": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
