--- a/.github/workflows/integration-e2e.yml
+++ b/.github/workflows/integration-e2e.yml
@@ -42,8 +42,9 @@ jobs:
 
       - name: Start database server
         run: |
-          sudo /etc/init.d/mysql start
+          mysqld_safe --skip-grant-tables
           mysql -u root root
+          sudo /etc/init.d/mysql start
           mysql -e "create database IF NOT EXISTS ${{env.DB_NAME}};" -uroot -proot
           mysql -e "create database IF NOT EXISTS ${{env.TEST_DB_NAME}};" -uroot -proot
 
