Added integration workflow

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ TEST_SITE_DB_PASSWORD="root"
 TEST_SITE_TABLE_PREFIX="wp_"
 TEST_DB_NAME="test"
 TEST_DB_HOST="localhost"
-TEST_DB_USER="wploader"
+TEST_DB_USER="root"
 TEST_DB_PASSWORD="root"
 TEST_TABLE_PREFIX="wp_"
 TEST_SITE_WP_URL="http://wp.localhost"
