--- a/.github/workflows/integration-e2e.yml
+++ b/.github/workflows/integration-e2e.yml
@@ -36,14 +36,9 @@ jobs:
           # extensions: gd, zip
           tools: composer:v2
 
-      - uses: ramsey/composer-install@v1
-        with:
-          composer-options: "--prefer-dist --ignore-platform-reqs"
-
       - name: Start database server
         run: |
           sudo /etc/init.d/mysql start
-          # mysql -u root root
           mysql -e "create database IF NOT EXISTS ${{env.DB_NAME}};" -uroot -proot
           mysql -e "create database IF NOT EXISTS ${{env.TEST_DB_NAME}};" -uroot -proot
 
@@ -76,6 +71,10 @@ jobs:
           wp db export $GITHUB_WORKSPACE/tests/_data/dump.sql
           cd $GITHUB_WORKSPACE
           sudo chmod -R 777 $WP_FOLDER_PATH
+
+      - uses: ramsey/composer-install@v1
+        with:
+          composer-options: "--prefer-dist --ignore-platform-reqs --working-dir=${{env.WP_FOLDER_PATH}}/wp-content/themes/italystrap"
 
       - name: Run test suite
         run: vendor/bin/codecept run wpunit
