Start rewriting all wpunit tests

--- a/composer.json
+++ b/composer.json
@@ -146,6 +146,10 @@
 			"vendor\\bin\\infection --threads=8"
 		],
 		"unit": [
+			"vendor\\bin\\codecept run unit",
+			"@clean"
+		],
+		"unit:cov": [
 			"vendor\\bin\\codecept run unit --coverage",
 			"@clean"
 		],
