Updated WPBrowser config

--- a/.env
+++ b/.env
@@ -1,3 +1,65 @@
+TEST=test
+COMPOSE_PROJECT_NAME=italystrap
+PROJECT_NAME=italystrap
+PHP_VERSION=7.4
+WP_VERSION=6.0
+WP_PORT_TEST=8888
+DB_PORT_TEST=3306
+PMA_PORT_TEST=8889
+
+DB_HOST=mysql
+DB_NAME=test
+DB_USER=root
+DB_PASSWORD=root
+TABLE_PREFIX=wp_
+
+
+###
+### Here starts the configuration for WPBrowser
+###
+
+TESTS_DIR=tests/php
+
+# WPUnit Suite config
+WPUNIT_ROOT_FOLDER="../../../"
+#WPUNIT_ROOT_FOLDER="/var/www/html"
+WPUNIT_DB_NAME=test
+WPUNIT_DB_HOST=mysql
+WPUNIT_DB_USER=root
+WPUNIT_DB_PASSWORD=root
+WPUNIT_TABLE_PREFIX=wp_
+WPUNIT_SITE_WP_DOMAIN=localhost.local
+WPUNIT_SITE_ADMIN_EMAIL=admin@localhost.local
+
+# Functional and Acceptance Unit Suite config for WPDB driver
+WPDB_DB_DSN=mysql:host=mysql;dbname=test
+WPDB_DB_USER=root
+WPDB_DB_PASSWORD=root
+# This is the url inside the container
+WPDB_WP_URL=http://localhost
+WPDB_WP_DOMAIN=localhost
+WPDB_TABLE_PREFIX=wp_
+WPDB_DUMP_FILE="tests/_data/dump.sql"
+
+# Functional and Acceptance Unit Suite config for WPBrowser driver
+# This is the url inside the container
+WPBROWSER_WP_URL=http://localhost
+WPBROWSER_ADMIN_USERNAME=root
+WPBROWSER_ADMIN_PASSWORD=root
+WPBROWSER_WP_ADMIN_PATH=/wp-admin
+
+# Used only for acceptance.suite.yml tests inside WPWebDriver configuration.
+# The value must be the name of the WordPress container
+# for resolving the correct IP of the machine if you use Docker as environment.
+# This will be also used for replace the hardcoded dump URL with the one below
+CHROMEDRIVER_WP_URL="http://italystrap_test"
+# This must be the name of the Selenium container
+CHROMEDRIVER_HOST=chromedriver
+CHROMEDRIVER_PORT="4444"
+
+
+
+
 TEST_SITE_DB_DSN=mysql:host=localhost;dbname=test
 WP_ROOT_FOLDER="/tmp/wordpress"
 TEST_SITE_WP_ADMIN_PATH="/wp-admin"
