--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -9,30 +9,47 @@ actor: AcceptanceTester
 modules:
     enabled:
         - WPDb
-        - WPBrowser
+        - WPWebDriver
         - \Helper\Acceptance
     config:
         WPDb:
-            dsn: '%TEST_SITE_DB_DSN%'
-            user: '%TEST_SITE_DB_USER%'
-            password: '%TEST_SITE_DB_PASSWORD%'
+            dsn: '%WPDB_DB_DSN%'
+            user: '%WPDB_DB_USER%'
+            password: '%WPDB_DB_PASSWORD%'
             dump: 'tests/_data/dump.sql'
             #import the dump before the tests; this means the test site database will be repopulated before the tests.
             populate: true
             # re-import the dump between tests; this means the test site database will be repopulated between the tests.
             cleanup: true
             waitlock: 10
-            url: '%TEST_SITE_WP_URL%'
+            url: '%WPDB_WP_URL%'
             urlReplacement: true #replace the hardcoded dump URL with the one above
-            tablePrefix: '%TEST_SITE_TABLE_PREFIX%'
+            tablePrefix: '%WPDB_TABLE_PREFIX%'
         WPBrowser:
-            url: '%TEST_SITE_WP_URL%'
-            adminUsername: '%TEST_SITE_ADMIN_USERNAME%'
-            adminPassword: '%TEST_SITE_ADMIN_PASSWORD%'
-            adminPath: '%TEST_SITE_WP_ADMIN_PATH%'
+            url: '%WPBROWSER_WP_URL%'
+            adminUsername: '%WPBROWSER_ADMIN_USERNAME%'
+            adminPassword: '%WPBROWSER_ADMIN_PASSWORD%'
+            adminPath: '%WPBROWSER_WP_ADMIN_PATH%'
             headers:
                 X_TEST_REQUEST: 1
                 X_WPBROWSER_REQUEST: 1
+        WPWebDriver:
+            url: '%CHROMEDRIVER_WP_URL%'
+            adminUsername: 'root'
+            adminPassword: 'root'
+            adminPath: '/wp-admin'
+            browser: chrome
+            host: %CHROMEDRIVER_HOST%
+            port: %CHROMEDRIVER_PORT%
+            window_size: 1200x2000
+            capabilities:
+                chromeOptions:
+                    args: [
+                        "--headless",
+                        "--disable-gpu",
+                        "--proxy-server='direct://'",
+                        "--proxy-bypass-list=*"
+                    ]
 step_decorators:
     - Codeception\Step\ConditionalAssertion
     - Codeception\Step\TryTo
