--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ PROJECT_NAME=italystrap
 PHP_VERSION=7.4
 WP_VERSION=6.0
 WP_PORT_TEST=8888
-DB_PORT_TEST=3306
-PMA_PORT_TEST=8889
+DB_PORT_TEST=8889
+PMA_PORT_TEST=8890
 
 DB_HOST=mysql
 DB_NAME=test
@@ -13,12 +13,14 @@ DB_USER=root
 DB_PASSWORD=root
 TABLE_PREFIX=wp_
 
-
 ###
 ### Here starts the configuration for WPBrowser
 ###
 
 TESTS_DIR=tests/php
+
+#WP_ROOT_FOLDER="../../../"
+WP_ROOT_FOLDER="/var/www/html"
 
 # WPUnit Suite config
 WPUNIT_ROOT_FOLDER="../../../"
@@ -44,8 +46,10 @@ WPDB_DUMP_FILE="tests/_data/dump.sql"
 # Functional and Acceptance Unit Suite config for WPBrowser driver
 # This is the url inside the container
 WPBROWSER_WP_URL=http://localhost
-WPBROWSER_ADMIN_USERNAME=root
-WPBROWSER_ADMIN_PASSWORD=root
+#WPBROWSER_ADMIN_USERNAME=root
+#WPBROWSER_ADMIN_PASSWORD=root
+WPBROWSER_ADMIN_USERNAME=admin
+WPBROWSER_ADMIN_PASSWORD=password
 WPBROWSER_WP_ADMIN_PATH=/wp-admin
 
 # Used only for acceptance.suite.yml tests inside WPWebDriver configuration.
@@ -57,24 +61,21 @@ CHROMEDRIVER_WP_URL="http://italystrap_test"
 CHROMEDRIVER_HOST=chromedriver
 CHROMEDRIVER_PORT="4444"
 
-
-
-
-TEST_SITE_DB_DSN=mysql:host=localhost;dbname=test
-WP_ROOT_FOLDER="/tmp/wordpress"
-TEST_SITE_WP_ADMIN_PATH="/wp-admin"
-TEST_SITE_DB_NAME="test"
-TEST_SITE_DB_HOST="localhost"
-TEST_SITE_DB_USER="root"
-TEST_SITE_DB_PASSWORD="root"
-TEST_SITE_TABLE_PREFIX="wp_"
-TEST_DB_NAME="test"
-TEST_DB_HOST="localhost"
-TEST_DB_USER="root"
-TEST_DB_PASSWORD="root"
-TEST_TABLE_PREFIX="wp_"
-TEST_SITE_WP_URL="http://wp.localhost"
-TEST_SITE_WP_DOMAIN="wp.localhost"
-TEST_SITE_ADMIN_EMAIL="admin@wp.localhost"
-TEST_SITE_ADMIN_USERNAME="admin"
-TEST_SITE_ADMIN_PASSWORD="password"
+#TEST_SITE_DB_DSN=mysql:host=localhost;dbname=test
+#WP_ROOT_FOLDER="/tmp/wordpress"
+#TEST_SITE_WP_ADMIN_PATH="/wp-admin"
+#TEST_SITE_DB_NAME="test"
+#TEST_SITE_DB_HOST="localhost"
+#TEST_SITE_DB_USER="root"
+#TEST_SITE_DB_PASSWORD="root"
+#TEST_SITE_TABLE_PREFIX="wp_"
+#TEST_DB_NAME="test"
+#TEST_DB_HOST="localhost"
+#TEST_DB_USER="root"
+#TEST_DB_PASSWORD="root"
+#TEST_TABLE_PREFIX="wp_"
+#TEST_SITE_WP_URL="http://wp.localhost"
+#TEST_SITE_WP_DOMAIN="wp.localhost"
+#TEST_SITE_ADMIN_EMAIL="admin@wp.localhost"
+#TEST_SITE_ADMIN_USERNAME="admin"
+#TEST_SITE_ADMIN_PASSWORD="password"
