--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -8,7 +8,7 @@ modules:
     enabled:
         - WPDb
         - WPBrowser
-        # - WPFilesystem
+        - WPFilesystem
         - Asserts
         - \Helper\Functional
     config:
@@ -37,3 +37,7 @@ modules:
             mu-plugins: '/wp-content/mu-plugins'
             themes: '/wp-content/themes'
             uploads: '/wp-content/uploads'
+step_decorators:
+    - Codeception\Step\ConditionalAssertion
+    - Codeception\Step\TryTo
+    - Codeception\Step\Retry
