--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 TEST=test
 COMPOSE_PROJECT_NAME=italystrap
 PROJECT_NAME=italystrap
+FOLDER_NAME=italystrap
 PHP_VERSION=8.0
+MATRIX_PHP_VERSION=80
 WP_VERSION=6.0
 WP_PORT_TEST=8888
 DB_PORT_TEST=8889
@@ -56,26 +58,7 @@ WPBROWSER_WP_ADMIN_PATH=/wp-admin
 # The value must be the name of the WordPress container
 # for resolving the correct IP of the machine if you use Docker as environment.
 # This will be also used for replace the hardcoded dump URL with the one below
-CHROMEDRIVER_WP_URL="http://italystrap_test"
+CHROMEDRIVER_WP_URL="http://italystrap80"
 # This must be the name of the Selenium container
 CHROMEDRIVER_HOST=chromedriver
 CHROMEDRIVER_PORT="4444"
-
-#TEST_SITE_DB_DSN=mysql:host=localhost;dbname=test
-#WP_ROOT_FOLDER="/tmp/wordpress"
-#TEST_SITE_WP_ADMIN_PATH="/wp-admin"
-#TEST_SITE_DB_NAME="test"
-#TEST_SITE_DB_HOST="localhost"
-#TEST_SITE_DB_USER="root"
-#TEST_SITE_DB_PASSWORD="root"
-#TEST_SITE_TABLE_PREFIX="wp_"
-#TEST_DB_NAME="test"
-#TEST_DB_HOST="localhost"
-#TEST_DB_USER="root"
-#TEST_DB_PASSWORD="root"
-#TEST_TABLE_PREFIX="wp_"
-#TEST_SITE_WP_URL="http://wp.localhost"
-#TEST_SITE_WP_DOMAIN="wp.localhost"
-#TEST_SITE_ADMIN_EMAIL="admin@wp.localhost"
-#TEST_SITE_ADMIN_USERNAME="admin"
-#TEST_SITE_ADMIN_PASSWORD="password"
