--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ WP_ROOT_FOLDER="/var/www/html"
 WPUNIT_ROOT_FOLDER="../../../"
 #WPUNIT_ROOT_FOLDER="/var/www/html"
 WPUNIT_DB_NAME=test
-WPUNIT_DB_HOST=mysql
+WPUNIT_DB_HOST=localhost
 WPUNIT_DB_USER=root
 WPUNIT_DB_PASSWORD=root
 WPUNIT_TABLE_PREFIX=wp_
@@ -36,18 +36,18 @@ WPUNIT_SITE_WP_DOMAIN=localhost.local
 WPUNIT_SITE_ADMIN_EMAIL=admin@localhost.local
 
 # Functional and Acceptance Unit Suite config for WPDB driver
-WPDB_DB_DSN=mysql:host=mysql;dbname=test
+WPDB_DB_DSN=mysql:host=localhost;dbname=test
 WPDB_DB_USER=root
 WPDB_DB_PASSWORD=root
 # This is the url inside the container
-WPDB_WP_URL=http://localhost
+WPDB_WP_URL=http://localhost:8888
 WPDB_WP_DOMAIN=localhost
 WPDB_TABLE_PREFIX=wp_
 WPDB_DUMP_FILE="tests/_data/dump.sql"
 
 # Functional and Acceptance Unit Suite config for WPBrowser driver
 # This is the url inside the container
-WPBROWSER_WP_URL=http://localhost
+WPBROWSER_WP_URL=http://localhost:8888
 #WPBROWSER_ADMIN_USERNAME=root
 #WPBROWSER_ADMIN_PASSWORD=root
 WPBROWSER_ADMIN_USERNAME=admin
@@ -58,7 +58,7 @@ WPBROWSER_WP_ADMIN_PATH=/wp-admin
 # The value must be the name of the WordPress container
 # for resolving the correct IP of the machine if you use Docker as environment.
 # This will be also used for replace the hardcoded dump URL with the one below
-CHROMEDRIVER_WP_URL="http://italystrap80"
+CHROMEDRIVER_WP_URL="http://localhost:8888"
 # This must be the name of the Selenium container
-CHROMEDRIVER_HOST=chromedriver
+CHROMEDRIVER_HOST=localhost
 CHROMEDRIVER_PORT="4444"
