Update .env file

--- a/.env
+++ b/.env
@@ -21,8 +21,7 @@ TABLE_PREFIX=wp_
 
 TESTS_DIR=tests/php
 
-#WP_ROOT_FOLDER="../../../"
-WP_ROOT_FOLDER="/var/www/html"
+WP_ROOT_FOLDER="../../../"
 
 # WPUnit Suite config
 WPUNIT_ROOT_FOLDER="../../../"
